--- a/frontend/src/Pages/page.css
+++ b/frontend/src/Pages/page.css
@@ -1,3 +1,14 @@
+.page{
+    flex: 0.8;
+    border-right: 1px solid #e0e0e0;
+    width: 100vw;
+    padding: 0 180px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .pageHeading{
     font-size: 2rem;
     font-weight: 700;
