--- a/frontend/src/Pages/Feed/VoiceBox.css
+++ b/frontend/src/Pages/Feed/VoiceBox.css
@@ -12,6 +12,7 @@
     color: white;
     font-size: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 100px;
 }
 
 .VoiceBox form {
