--- a/frontend/src/Pages/SideBar/SideBar.css
+++ b/frontend/src/Pages/SideBar/SideBar.css
@@ -3,10 +3,15 @@
 .sidebar{
     background-color:#faebd7;
     padding: 10px;
-    margin-right: 30px;
+    /* margin-right: 30px; */
     width:max-content;
     height: 100vh;
     overflow-y: scroll;
+    border-right: 2px solid #ffffff;
+}
+
+.sidebar::-webkit-scrollbar{
+    display: none;
 }
 
 
