--- a/frontend/src/Pages/Profile/MainPage/MainPage.css
+++ b/frontend/src/Pages/Profile/MainPage/MainPage.css
@@ -30,16 +30,97 @@
     z-index: 10;
 }
 
-.CoverImage {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 10%;
+.CoverImage{
+    background-color: #919191;
 }
 
 .CoverImage img {
-    max-width: 100%;
-    height: 10%;
+    height: max-content;
+    width: auto;
+    object-fit: cover;
+    max-height: 200px;
+
+}
+
+.CoverImage .onHoverDiv {
+    position: relative;
+    height: max-content;
+    width: auto;
+    max-height: 200px;
+}
+
+.CoverImage .onHoverDiv input[type="file"] {
+    display: none;
+}
+
+.CoverImage .uploadIcon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    color: #fff;
+    font-size: 48px;
+}
+
+.CoverImage .onHoverDiv:hover img {
+    filter: blur(5px);
+}
+
+.onHoverDiv:hover .uploadIcon {
+    opacity: 1;
+}
+
+.profilePicContainer{
+    display: flex;
+    flex-direction: row;
+    width:max-content;
+    
+    justify-self: center;
+    margin-left: 10%;
+}
+
+
+
+
+.profilePicContainer .onHoverDiv input[type="file"] {
+    display: none;
+}
+
+.profilePicContainer .profilePic .uploadIcon {
+   width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    color: #fff;
+    font-size: 48px;
+
+}
+
+.profilePicContainer .editProfile{
+    margin-top: 50%;
+    margin-left: 20%;
+    
+    z-index: 2;
+
+    color: black;
+    font-size: large;
+
+}
+
+.profilePicContainer .onHoverDiv .profilePic{
+    width: 40px;
+    height: 40px;
+}
+
+
+.editProfileIcon {
+    z-index: 2;
 }
 
 .profilePic{
@@ -208,14 +289,27 @@ ul{
     border-radius: 50%;
     margin-right: 10px;
     object-fit: cover;
+    display: flex;
 }
 
-.postText {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
+
+
+.postContent .postText {
+    margin-top: 10px;
+    font-size: 1rem;
+    max-height: 3.6em; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; 
+    -webkit-box-orient: vertical;
+    line-height: 1.2em; 
+    cursor: pointer;
+}
+
+.postContent .postText.expanded {
+    max-height: none;
+    -webkit-line-clamp: unset;
 }
 
 .voiceText {
@@ -230,4 +324,3 @@ ul{
     color: #666;
     margin-top: 5px;
 }
-
