Implement modal to display post content in a popup

--- a/frontend/src/Pages/Profile/EditProfile/EditProfile.css
+++ b/frontend/src/Pages/Profile/EditProfile/EditProfile.css
@@ -134,7 +134,7 @@
 
 
 .Edit-profile-btn {
-    width: 100%;
+    width: max-content;
     height: auto;
     background-color: #096f71;
     color: #ffffff; 
@@ -144,10 +144,14 @@
     font-size: 16px; 
     cursor: pointer; 
     transition: background-color 0.3s ease, transform 0.3s ease;
-    display:flex;
-    position: relative;
-    left: 100%;
-    bottom: 100%;
+
+    display: flex;
+    position:relative;
+    left: 80%;
+    top: -50px;
+
+
+
 
   }
   
