--- a/frontend/src/Pages/Feed/Feed.css
+++ b/frontend/src/Pages/Feed/Feed.css
@@ -18,6 +18,8 @@
     top: 0;
     background-color: white;
     width: 60%;
+    /* flex: 0.8; */
+    flex: 1;
     z-index: 1000;
     padding: 0 180px;
     box-sizing: border-box;
