--- a/frontend/src/Pages/Feed/Post/Post.css
+++ b/frontend/src/Pages/Feed/Post/Post.css
@@ -1,6 +1,6 @@
 .post {
     display: flex;
-    align-items: flex-start;
+    /* align-items: flex-start; */
     padding: 20px;
     width: 100%;
     border-radius: 15px;
