--- a/frontend/src/Pages/SideBar/SideBar.css
+++ b/frontend/src/Pages/SideBar/SideBar.css
@@ -2,7 +2,7 @@
 
 .sidebar{
     background-color:#faebd7;
-    padding: 10px;
+    padding: 0px 10px;
     /* margin-right: 30px; */
     /* width: 200px; */
     flex: 0.2;
