--- a/frontend/src/Pages/Widges/Widges.css
+++ b/frontend/src/Pages/Widges/Widges.css
@@ -4,6 +4,12 @@
     flex-direction: column;
     align-items: center;
     background-color: #faebd7;
+    max-height: 100vh;
+    overflow-y: scroll;
+}
+
+.widges::-webkit-scrollbar {
+    display: none;
 }
   
   .widges h1 {
@@ -44,4 +50,17 @@
   .MuiTextField-root {
     width: 100%;
   }
-  
+
+.modalBox .modalBoxContent .content .voiceImage{
+    transform: translateX(40%);
+    width: 60%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.overlay{
+  width: 100%;
+  height: 100%;
+}
