--- a/frontend/src/Pages/page.css
+++ b/frontend/src/Pages/page.css
@@ -5,6 +5,8 @@
     padding: 0 180px;
     height: 100vh;
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .pageHeading{   
