implement OTP authentication and send OTP to email

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.goog-te-banner-frame.skiptranslate {
+  display: none !important;
+}
+
+body {
+  top: 10 !important;
+}
 
 .App-logo {
   height: 40vmin;
