--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     height: 100vh;
+    width: 100vw;
     overflow:hidden;
     background-color: #F9F1DD;
   }
