--- a/frontend/src/Pages/Feed/Feed.css
+++ b/frontend/src/Pages/Feed/Feed.css
@@ -3,6 +3,7 @@
     border-right: 1px solid #e0e0e0;
     padding: 0 200px;
     height: 100vh;
+    width: max-content;
     overflow-y: auto;
 
     display: flex;
@@ -16,10 +17,7 @@
 .FeedPage .Header {
     position: fixed;
     top: 0;
-    background-color: white;
-    width: 58%;
-    /* flex: 0.8; */
-    /* flex: 1; */
+    width: 59%;
     z-index: 1000;
    
     
@@ -61,7 +59,7 @@
 
     display: flex;
     position: relative;
-    left: 70%;
+    left: 60%;
 
     margin-bottom: 7px;
     background-color: #ff8c00;
