--- a/frontend/src/Pages/Profile/MainPage/MainPage.css
+++ b/frontend/src/Pages/Profile/MainPage/MainPage.css
@@ -7,6 +7,8 @@
 
     scrollbar-width: thin;
     scrollbar-color: black aqua;
+
+    background-color: #f0eeee;
 }
 
 .MainPage::-webkit-scrollbar {
